#add_executable(htmlgui
#  html-gui.cpp
#  $<TARGET_OBJECTS:${PROJECT_NAME}>
#  )

# add_executable(9-odbcli.test
#   tests/odbcli.cpp
#   $<TARGET_OBJECTS:${PROJECT_NAME}>
#   )
# 
# find_library(LINE_NOISE liblinenoise.a linenoise)
# target_link_libraries(9-odbcli.test
#   ${LINE_NOISE}
#   ${CMAKE_THREAD_LIBS_INIT}
#   )

